Finalizing project structure.

--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,17 @@
 AC_INIT([arrowheads], 1.0)
-AM_INIT_AUTOMAKE
+AC_CONFIG_MACRO_DIRS([m4])
+
+AM_INIT_AUTOMAKE([subdir-objects])
 
 AC_PROG_CXX([clang++ g++])
 AX_CXX_COMPILE_STDCXX([17], [noext], [mandatory])
 
-AC_CONFIG_FILES([Makefile src/Makefile])
+#WITH_MYSQL()
+#MYSQL_NEED_FORK([mariadb])
+#MYSQL_NEED_VERSION([5.5.34])
+#MYSQL_USE_CLIENT_API()
+#MYSQL_SUBST()
+
+AC_CONFIG_FILES([Makefile src/Makefile test/Makefile])
 
 AC_OUTPUT
