--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -7,4 +7,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/inc -I$(top_srcdir)/src
 #AM_CXXFLAGS = $(INTI_CFLAGS)
 #ArrowheadSrv_LDADD = $(INTI_LIBS)
 
-test_SOURCES = main.cpp ../src/net/HTTPHandler.cpp
+test_SOURCES = main.cpp                  \
+               test0052.cpp              \
+               test0053.cpp              \
+               ../src/utils/parsers.cpp
