ServiceRegistry branch merge

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,9 +3,9 @@ bin_PROGRAMS = service_registry
 #bin_PROGRAMS = dummy_registry service_registry
 
 AM_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/inc
-#${ARROWHEAD_CPPFLAGS} 
+#${ARROWHEAD_CPPFLAGS}
 #AM_CXXFLAGS = ${ARROWHEAD_CXXFLAGS}
-AM_LDFLAGS = $(shell mariadb_config --libs) -lmicrohttpd -lcurl
+AM_LDFLAGS = $(shell mariadb_config --libs) -lmicrohttpd -lcurl -ljson-c
 
 #AM_CXXFLAGS = $(INTI_CFLAGS)
 #ArrowheadSrv_LDADD = $(INTI_LIBS)
@@ -15,7 +15,10 @@ sources = main.cpp                         \
           utils/pgetopt.cpp                \
           utils/parsers.cpp                \
           net/mhttp/MHTTPHandler.cpp       \
-          net/request/ReqBuilderWCurl.cpp
+          net/request/ReqBuilderWCurl.cpp  \
+          json/ServiceQueryForm.cpp        \
+          json/ServiceQueryList.cpp        \
+          json/ServiceRegistryEntry.cpp
 
 service_registry_CPPFLAGS = -DCOREELEMENT=ServiceRegistry
 service_registry_SOURCES = $(sources)
