--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,6 +1,8 @@
 bin_PROGRAMS = test
 
 AM_CPPFLAGS = -I$(top_srcdir)/inc -I$(top_srcdir)/src
+AM_LDFLAGS = $(shell mariadb_config --libs) -lmicrohttpd -lcurl -ljson-c
+
 #AM_LDFLAGS = $(shell mariadb_config --libs)
 
 
@@ -10,4 +12,11 @@ AM_CPPFLAGS = -I$(top_srcdir)/inc -I$(top_srcdir)/src
 test_SOURCES = main.cpp                  \
                test0052.cpp              \
                test0053.cpp              \
-               ../src/utils/parsers.cpp
+               test0125.cpp              \
+               ../src/utils/parsers.cpp  \
+               ../src/db/MariaDB.cpp                   \
+               ../src/net/request/ReqBuilderWCurl.cpp  \
+               ../src/json/ServiceQueryForm.cpp        \
+               ../src/json/ServiceQueryList.cpp        \
+               ../src/json/ServiceRegistryEntry.cpp
+
