Service Registry Public/private functions are almost done:  /echo  /register - done - todo: compare with java implementation  /unregister - done - todo: compare with java implementation  /query - missng - compare logic with java implementation  /query/system - done  /query/system/id - done
The following mgmt functions are done:
 GET /mgmt/id
 DEL /mgmt/id
 DEL /mgmt/services/id
 DEL /mgmt/systems/id

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,7 +18,8 @@ sources = main.cpp                         \
           net/request/ReqBuilderWCurl.cpp  \
           json/ServiceQueryForm.cpp        \
           json/ServiceQueryList.cpp        \
-          json/ServiceRegistryEntry.cpp
+          json/ServiceRegistryEntry.cpp    \
+          json/System.cpp
 
 service_registry_CPPFLAGS = -DCOREELEMENT=ServiceRegistry -I$(top_srcdir) -I$(top_srcdir)/inc -I$(top_srcdir)/src
 service_registry_SOURCES = $(sources)
