--- a/src/arrowhead.ini
+++ b/src/arrowhead.ini
@@ -9,13 +9,16 @@ dbname = arrowhead
 user   = root
 passwd = root
 
-[CERT]
-ssl_cert   = ../keys/tempsensor.testcloud1.publicCert.pem
-ssl_cert_t = PEM
-ssl_key    = ../keys/tempsensor.testcloud1.private.key
-ssl_key_t  = PEM
-cainfo     = ../keys/tempsensor.testcloud1.caCert.pem
-keypasswd  = 12345
+[SSL]
+key-store-type       = PEM
+key-store            = ../etc/key-store
+key-store-password   = 12345
+key-alias            = cert
+key-password         = 12345
+client-auth          = need
+trust-store-type     = PEM
+trust-store          = ../etc/trust-store
+trust-store-password = 12345
 
 [HTTP]
 port   = 16223
