[POPPY-0022] Skeleton codes for missing core elements added.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,15 @@
-bin_PROGRAMS = cert_authority authorizer service_registry
+bin_PROGRAMS = authorizer       \
+               cert_authority   \
+               choreographer    \
+               dev_registry     \
+               eventhandler     \
+               gatekeeper       \
+               gateway          \
+               onboarding       \
+               orchestrator     \
+               qos_monitor      \
+               service_registry \
+               sys_registry
 
 noinst_LIBRARIES = libgason.a libjson11.a libutils.a
 libgason_a_SOURCES = ../inc/gason/gason.cpp
@@ -23,16 +34,50 @@ sources += http/crate/Response.cpp         \
 ################################################################################################
 ################################################################################################
 
+authorizer_CPPFLAGS = -include boot/traits/Authorizer.h $(AM_CPPFLAGS)
+authorizer_SOURCES = $(sources)
+authorizer_LDADD = $(libraries)
+
 cert_authority_CPPFLAGS = -include boot/traits/CertAuthority.h $(AM_CPPFLAGS)
 cert_authority_SOURCES = $(sources) 
 cert_authority_LDADD = $(libraries)
 
-authorizer_CPPFLAGS = -include boot/traits/Authorizer.h $(AM_CPPFLAGS)
-authorizer_SOURCES = $(sources)
-authorizer_LDADD = $(libraries)
+choreographer_CPPFLAGS = -include boot/traits/Choreographer.h $(AM_CPPFLAGS)
+choreographer_SOURCES = $(sources)
+choreographer_LDADD = $(libraries)
+
+dev_registry_CPPFLAGS = -include boot/traits/DevRegistry.h $(AM_CPPFLAGS)
+dev_registry_SOURCES = $(sources)
+dev_registry_LDADD = $(libraries)
+
+eventhandler_CPPFLAGS = -include boot/traits/EventHandler.h $(AM_CPPFLAGS)
+eventhandler_SOURCES = $(sources)
+eventhandler_LDADD = $(libraries)
+
+gatekeeper_CPPFLAGS = -include boot/traits/Gatekeeper.h $(AM_CPPFLAGS)
+gatekeeper_SOURCES = $(sources)
+gatekeeper_LDADD = $(libraries)
+
+gateway_CPPFLAGS = -include boot/traits/Gateway.h $(AM_CPPFLAGS)
+gateway_SOURCES = $(sources)
+gateway_LDADD = $(libraries)
+
+onboarding_CPPFLAGS = -include boot/traits/Onboarding.h $(AM_CPPFLAGS)
+onboarding_SOURCES = $(sources) 
+onboarding_LDADD = $(libraries)
+
+orchestrator_CPPFLAGS = -include boot/traits/Orchestrator.h $(AM_CPPFLAGS)
+orchestrator_SOURCES = $(sources) 
+orchestrator_LDADD = $(libraries)
+
+qos_monitor_CPPFLAGS = -include boot/traits/QosMonitor.h $(AM_CPPFLAGS)
+qos_monitor_SOURCES = $(sources)
+qos_monitor_LDADD = $(libraries)
 
 service_registry_CPPFLAGS = -include boot/traits/ServiceRegistry.h $(AM_CPPFLAGS)
 service_registry_SOURCES = $(sources)
 service_registry_LDADD = $(libraries)
 
-
+sys_registry_CPPFLAGS = -include boot/traits/SysRegistry.h $(AM_CPPFLAGS)
+sys_registry_SOURCES = $(sources)
+sys_registry_LDADD = $(libraries)
