[POPPY-0072] Mandatory/Optional client cert handling added.

--- a/etc/arrowhead.ini
+++ b/etc/arrowhead.ini
@@ -15,7 +15,7 @@ key-store            = ../etc/key-store
 key-store-password   = 123456
 key-alias            = cert
 key-password         = 123456
-client-auth          = need
+client-auth          = not-need
 trust-store-type     = PEM
 trust-store          = ../etc/trust-store
 trust-store-password = 123456
