[POPPY-0076] DevRegistry implementation added.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,10 +11,15 @@ bin_PROGRAMS = authorizer       \
                service_registry \
                sys_registry
 
-noinst_LIBRARIES = libgason.a libjson11.a libutils.a
+noinst_LIBRARIES = libgason.a libjson11.a libutils.a libcrate.a
 libgason_a_SOURCES = ../inc/gason/gason.cpp
 libjson11_a_SOURCES = ../inc/json11/json11.cpp
 libutils_a_SOURCES = utils/pgetopt.cpp utils/inifile.cpp
+
+libcrate_a_SOURCES = http/crate/Response.cpp     \
+                     http/crate/X509Cert.cpp     \
+                     http/serv/RequestParser.cpp
+
 
 AM_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/inc -I$(top_srcdir)/src -include boot/features.h
 AM_LDFLAGS = $(shell mariadb_config --libs)
@@ -25,11 +30,11 @@ sources = main.cpp                         \
           boot/boot.cpp                    \
           http/wget/WG_Curl.cpp
 
-libraries = libgason.a libjson11.a libutils.a
+libraries = libgason.a libjson11.a libutils.a libcrate.a
 
-sources += http/crate/Response.cpp         \
-           http/crate/X509Cert.cpp         \
-           http/serv/RequestParser.cpp
+#sources += http/crate/Response.cpp         \
+#           http/crate/X509Cert.cpp         \
+#           http/serv/RequestParser.cpp
 
 ################################################################################################
 ################################################################################################
